classDiagram

    class Command {
        <<abstract>>
        + editor Editor
        - backup String
        + Command(editor: Editor)
        + backup() : void
        + undo() : void
        + execute() : bool
    }

    class CommandHistory {
        - history : Command[]
        + push(c : Command) : void
        + pop() : Command
        + isEmpty() : bool
    }

    class CopyCommand {
        + CopyCommand(editor: Editor)
        + execute() : bool
    }

    class PasteCommand {
        + PasteCommand(editor: Editor)
        + execute() : bool
    }

    class CutCommand {
        + CutCommand(editor: Editor)
        + execute() : bool
    }

    class Editor {
        + textField : JTextArea
        + clipboard : String
        - history : CommandHistory
        + init() : void
        + executeCommand(command : Command) : void
        + undo() : void
    }

    Editor "*" --o "1" CommandHistory
    CommandHistory  -->  Command

    PasteCommand  --|>  Command
    CutCommand  --|>  Command
    CopyCommand  --|>  Command


